# pyBayesThresh

./: README.md  denoise_demos.py  pyBayesDenoise.py  pyproject.toml  setup.cfg
pyBayesDenoise/: e_bayes_thresh.py
src/pyBayesDenoise/: __init__.py  e_bayes_thresh.py
src/pyBayesThresh/: __init__.py  e_bayes_thresh.py  wavelet_denoise.py
tests/: tests.py
