[metadata]
name = pyBayesThresh-ARTHURSLOAN
version = 0.0.1
author = Arthur Sloan
author_email = artsloan@gmail.com
description = A Python 3 implementation of the EbayesThresh R Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arthursloan/pyBayesDenoise
project_urls =
    Bug Tracker = TODO
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src